[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/game_object_scripts/RodSegment.gd" type="Script" id=1]
[ext_resource path="res://scripts/game_object_scripts/Draggable.gd" type="Script" id=2]

[sub_resource type="SegmentShape2D" id=1]

[node name="Rod" type="Node2D"]
script = ExtResource( 1 )

[node name="Body" type="RigidBody2D" parent="."]
input_pickable = true
collision_layer = 2
collision_mask = 3
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Body"]
visible = false
shape = SubResource( 1 )

[node name="SelectableArea" type="Area2D" parent="Body"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Body/SelectableArea"]
visible = false
[connection signal="input_event" from="Body/SelectableArea" to="Body" method="_on_SelectableArea_input_event"]
[connection signal="mouse_entered" from="Body/SelectableArea" to="." method="_on_SelectableArea_mouse_entered"]
[connection signal="mouse_exited" from="Body/SelectableArea" to="." method="_on_SelectableArea_mouse_exited"]
